ci: 执行 release job

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -168,7 +168,8 @@ jobs:
 
 
   release:
-    if: ${{ needs.meta.outputs.is_release == 'true' }}
+    
+    if: true  # if: ${{ needs.meta.outputs.is_release == 'true' }}
     needs: [meta, windows, unix]
     runs-on: ubuntu-latest
     steps:
