--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -168,8 +168,7 @@ jobs:
 
 
   release:
-    
-    if: true  # if: ${{ needs.meta.outputs.is_release == 'true' }}
+    if: ${{ needs.meta.outputs.is_release == 'true' }}
     needs: [meta, windows, unix]
     runs-on: ubuntu-latest
     steps:
